--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -231,6 +231,7 @@ MOVIE &amp; MORE."</string>
     <string name="on_error_login">Please, check out your internet connection!</string>
     <string name="firebase_error_login">You have some problem with signing to your account!</string>
     <string name="on_cancel_login">Entrance was canceled!</string>
-    <string name="new_movies">New Movies</string>
-    <string name="populer_movies">Populer Movies</string>
+    <string name="new_movies">Film Terbaru</string>
+    <string name="populer_movies">Film Populer</string>
+
 </resources>
