--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,6 +173,7 @@ upper &amp; lower case letters and at least one numbers"</string>
     <string name="ad_unit_id_native">ca-app-pub-5062659998443194/5849499861</string>
     <string name="ad_unit_id_native_second">ca-app-pub-5062659998443194/1013844266</string>
     <string name="ad_unit_banner">ca-app-pub-5062659998443194/2490577466</string>
+    <string name="ad_unit_interstitial">ca-app-pub-5062659998443194/2652027865</string>
     <string name="sample_sub_title" />
     <string name="sample_time" />
     <string name="sample_title" />
